--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
     "gulp-html": "^3.4.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-minify": "^3.1.0",
     "gulp-stylelint": "^13.0.0",
     "stylelint": "^14.6.1"
   },
